# WeedIdentifier-RAG-Langchain

./: .gitignore  README.md  pyproject.toml  test_question.txt  test_questions.txt
Rag/: app.py  farmerbot.ipynb  main.py  stream.py
Rag/db/: chroma.sqlite3
