[project]
name = "farmer-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langdetect>=1.0.9",
    "pypdf>=6.12.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
]
